--- a/html/index.html
+++ b/html/index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      rel="JavaScript"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="JavaScript" href="/script/script.js" />
-    <title>Portfolio ABERKANE SALIM</title>
+    <title>Portfolio ABERKANE SALIM 2024</title>
   </head>
   <body>
+    <!----------------------------------header------------------------------------>
     <header>
-      <a href="#" class="logo">ABERKANE Salim</a>
+      <a href="#" class="logo"><img src="/images/Logo 07.png" alt="" class="imgLogo"></a>
       <nav class="navigation">
         <a href="#education">Education</a>
         <a href="additionalEducation">Additional education</a>
@@ -24,7 +23,7 @@
         <a href="#contact">Contact</a>
       </nav>
     </header>
-
+    <!----------------------------------section main------------------------------>
     <section class="main">
       <div>
         <h2>Hello, I'm Salim Aberkane<br /><span>Web developer</span></h2>
@@ -32,22 +31,22 @@
         <a href="#projects" class="main-btn">View my work</a>
       </div>
     </section>
+    <!----------------------------------section about----------------------------->
     <section class="about">
       <h2 class="title">About me</h2>
       <div>
-      <div>
-        
-        <h3>I am a Professional Web developer.</h3>
+        <div>
+          <h3>I am a Professional Web developer.</h3>
+        </div>
+        <div class="social-icons">
+          <a href="#linkedin"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="#x-twitter"><i class="fa-brands fa-x-twitter"></i></a>
+          <a href="#facebook"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#instagram"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#youtube"><i class="fa-brands fa-youtube"></i></a>
+          <a href="#github"><i class="fa-brands fa-github"></i></a>
+        </div>
       </div>
-      <div class="social-icons">
-        <a href="#linkedin"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="#x-twitter"><i class="fa-brands fa-x-twitter"></i></a>
-        <a href="#facebook"><i class="fa-brands fa-facebook"></i></a>
-        <a href="#instagram"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#youtube"><i class="fa-brands fa-youtube"></i></a>
-        <a href="#github"><i class="fa-brands fa-github"></i></a>
-      </div>
-    </div>
       <div id="imageabout"></div>
     </section>
   </body>
