--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,9 @@
   <body>
     <!----------------------------------header------------------------------------>
     <header>
-      <a href="#" class="logo"><img src="/images/Logo 07.png" alt="" class="imgLogo"></a>
+      <a href="#" class="logo"
+        ><img src="/images/Logo 07.png" alt="" class="imgLogo"
+      /></a>
       <nav class="navigation">
         <a href="#education">Education</a>
         <a href="additionalEducation">Additional education</a>
@@ -33,10 +35,15 @@
     </section>
     <!----------------------------------section about----------------------------->
     <section class="about">
-      <h2 class="title">About me</h2>
       <div>
         <div>
-          <h3>I am a Professional Web developer.</h3>
+          <h2 class="title">About me</h2>
+        </div>
+        <div class="description">
+          <h3>
+            I am a Professional Web developer,<br />
+            I love working with CSS, HTML, JavaScript and Laravel.
+          </h3>
         </div>
         <div class="social-icons">
           <a href="#linkedin"><i class="fa-brands fa-linkedin"></i></a>
@@ -47,7 +54,9 @@
           <a href="#github"><i class="fa-brands fa-github"></i></a>
         </div>
       </div>
-      <div id="imageabout"></div>
+      <div>
+        <img src="/images/My picture.jpg" class="aboutImg" />
+      </div>
     </section>
   </body>
 </html>
