modification de script num 3

--- a/html/index.html
+++ b/html/index.html
@@ -37,12 +37,13 @@
     <section class="about">
       <div>
         <div>
-          <h2 class="title">About me</h2>
+          <h2 class="title">About <span>Me</span></h2>
         </div>
-        <div class="description">
+        <div>
           <h3>
-            I am a Professional Web developer,<br />
-            I love working with CSS, HTML, JavaScript and Laravel.
+            I am a professional <span>Web developer</span>,<br />
+            I love working with <span>CSS, HTML, JavaScript</span> and
+            <span>Laravel</span>.
           </h3>
         </div>
         <div class="social-icons">
